Fixed header text size issue on mobile screens

--- a/css/chroma-app-style.css
+++ b/css/chroma-app-style.css
@@ -57,7 +57,7 @@
 /* Bootstrap overrides */
 
   h1 {
-    font-size: 110px;
+    font-size: 6em;
   }
 
   .btn-primary {
